// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topbar should renders properly 1`] = `
<div
  className="topbar"
>
  <div />
  <div
    className="topbar__options"
  >
    <button
      className="button button--secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-filter fa-w-16 "
        data-icon="filter"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      Filtros
    </button>
    <div
      className="topbar__settings"
    >
      <img
        alt="Felino da Silva"
        className="topbar__avatar"
        onClick={[Function]}
        role="presentation"
        src="https://placekitten.com/32/32"
      />
    </div>
  </div>
</div>
`;

exports[`Topbar showFilterButton when it is false should include Settings 1`] = `
<div
  className="topbar"
>
  <div />
  <div
    className="topbar__options"
  >
    <div
      className="topbar__settings"
    >
      <img
        alt="Felino da Silva"
        className="topbar__avatar"
        onClick={[Function]}
        role="presentation"
        src="https://placekitten.com/32/32"
      />
    </div>
  </div>
</div>
`;

exports[`Topbar showFilterButton when it is true should include Settings 1`] = `
<div
  className="topbar"
>
  <div />
  <div
    className="topbar__options"
  >
    <button
      className="button button--secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-filter fa-w-16 "
        data-icon="filter"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      Filtros
    </button>
    <div
      className="topbar__settings"
    >
      <img
        alt="Felino da Silva"
        className="topbar__avatar"
        onClick={[Function]}
        role="presentation"
        src="https://placekitten.com/32/32"
      />
    </div>
  </div>
</div>
`;

exports[`Topbar when there is children renders children with with-info modifier 1`] = `
<div
  className="topbar topbar--with-info"
>
  <div>
    <span>
      topbar
    </span>
  </div>
  <div
    className="topbar__options"
  >
    <button
      className="button button--secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-filter fa-w-16 "
        data-icon="filter"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      Filtros
    </button>
    <div
      className="topbar__settings"
    >
      <img
        alt="Felino da Silva"
        className="topbar__avatar"
        onClick={[Function]}
        role="presentation"
        src="https://placekitten.com/32/32"
      />
    </div>
  </div>
</div>
`;
